--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primer Entrega</title>
-    <script src="./java-script/main.js"></script>
-</head>
-<body>
-    <h1>Ivo Nicolas Exequiel Alderete</h1>
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--Custom Css-->
+    <link rel="stylesheet" href="./styles/styles.css" />
+    </head>
+    <body>
+    <nav>
+        <header>
+            <a href="./index.html">
+            <img class="logo" src="./styles/img/AlienPc (7).png" alt="logo de la empresa AlienPc">
+            </a>
+            <ul>
+                <li>
+                    <a class="cart-icon" href="./carrito.html">
+                        <i class="fas fa-shopping-cart"></i> Carrito <span id="numerito" class="numerito">0</span> <!-- Ícono de carrito -->
+                    </a>
+                </li>
+            </ul>
+        </header>
+    </nav>
+    <div>
+        <main>
+            <h2 class="titulo-principal"> Productos </h2>
+            <div id="contenedor-productos" class="contenedor-productos">
+        </main>
+    <!--Contenido agregado desde JS-->
+    </div>
+
+
+<footer>
+    <p>
+        Diseñado por Ivo Alderete
+    </p>
+</footer>
+
+
+    <script defer src="./java-script/main.js"></script>
 </body>
+
+
+
+
+
+
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </html>
