--- a/carrito.html
+++ b/carrito.html
@@ -44,66 +44,34 @@
         <main>
         <section id="carrito" class="carrito-container">
             <h2 class="titulo-principal">Carrito</h2>
-            <div id="contenedor-carrito">
-            <p class="carrito-vacio">Tu carrito esta vacio</p>
-            <div class="carrito-productos">
-                <img
-                class="carrito-producto-imagen"
-                src="./styles/img/Predator_X32_01.jpg"
-                alt=""
-                />
-                <div class="carrito-prodcuto-titulo">
-                <small>titulo</small>
-                <h3>Monitor1</h3>
+            <div class="contenedor-carrito">
+                <!-- Mensaje de carrito vacío -->
+                <p class="carrito-vacio">Tu carrito está vacío</p>
+            
+                <!-- Productos en el carrito -->
+                <div class="carrito-productos">
+                    <div class="carrito-producto">
+                        <img src="./styles/img/Predator_X32_01.jpg" alt="Producto" class="carrito-producto-imagen">
+                        <div class="carrito-producto-detalles">
+                            <h3 class="carrito-producto-titulo">Nombre del Producto</h3>
+                            <small>$500</small>
+                        </div>
+                        <button class="svg">Eliminar</button>
+                    </div>
+                    <!-- Más productos aquí -->
                 </div>
-                <div class="carrito-producto-cantidad">
-                <small>Cantidad</small>
-                <p>1</p>
+            
+                <!-- Acciones del carrito -->
+                <div class="carrito-acciones">
+                    <button class="carrito-acciones-vaciar">Vaciar Carrito</button>
+                    <div class="carrito-acciones-derecha">
+                        <div class="carrito-accione-total">
+                            <span>Total:</span>
+                            <span>$1500</span>
+                        </div>
+                        <button class="carrito-acciones-comprar">Comprar</button>
+                    </div>
                 </div>
-                <div class="carrito-producto-precio">
-                <small>Precio</small>
-                <p>$500</p>
-                </div>
-                <div class="carrito-producto-subtotal">
-                <small>Subtotal</small>
-                <p>$500</p>
-                </div>
-                <button class="carrito-producto-eliminar">
-                <i class="bi bi-trash-fill"></i>
-                <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class="icon icon-tabler icons-tabler-outline icon-tabler-trash"
-            >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 7l16 0" />
-                <path d="M10 11l0 6" />
-                <path d="M14 11l0 6" />
-                <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
-                <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
-            </svg>
-                </button>
-            </div>
-            </div>
-
-            <div class="carrito-acciones">
-            <div class="carrito-acciones-izquierda">
-                <button class="carrito-acciones-vaciar">Vaciar Carrito</button>
-            </div>
-            <div class="carrito-acciones-derecha">
-                <div class="carrito-acciones-total">
-                <p>Total</p>
-                <p id="total">$500</p>
-                </div>
-                <button class="carrito-acciones-comprar">Comprar ahora</button>
-            </div>
             </div>
 
             <div class="carrito-total">
