--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li>
                     <a class="cart-icon" href="./carrito.html">
-                        <i class="fas fa-shopping-cart"></i> Carrito <span id="numerito" class="numerito">0</span> <!-- Ícono de carrito -->
+                        <i class="fas fa-shopping-cart"></i><span id="numerito" class="numerito">0</span> <!-- Ícono de carrito -->
                     </a>
                 </li>
             </ul>
@@ -33,7 +33,6 @@
     <!--Contenido agregado desde JS-->
     </div>
 
-
 <footer>
     <p>
         Diseñado por Ivo Alderete
@@ -41,6 +40,9 @@
 </footer>
 
 
+
+
+    <script defer src="/java-script/carrito.js"></script>
     <script defer src="./java-script/main.js"></script>
 </body>
 
