solucion de git hub(rutas)

--- a/carrito.html
+++ b/carrito.html
@@ -90,8 +90,8 @@
 
 
 
-    <script defer src="/java-script/carrito.js"></script>
-    <script defer src="/java-script/main.js"></script>
+    <script defer src="./java-script/carrito.js"></script>
+    <script defer src="./java-script/main.js"></script>
     </body>
 
 
