--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <script defer src="./java-script/main.js"></script>
-    <script defer src="/java-script/carrito.js"></script>
+    <script defer src="./java-script/carrito.js"></script>
 </body>
 
 
