--- a/carrito.html
+++ b/carrito.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Protest+Guerrilla&display=swap" rel="stylesheet">
     <!--Custom Css-->
     <link rel="stylesheet" href="./styles/styles.css" />
+    <!--JS-->
+    <script defer src="./java-script/main.js"></script>
+    <script defer src="./java-script/carrito.js"></script>
     </head>
     <body>
     <div>
