--- a/carrito.html
+++ b/carrito.html
@@ -13,8 +13,8 @@
     <!--Custom Css-->
     <link rel="stylesheet" href="./styles/styles.css" />
     <!--JS-->
-    <script defer src="./java-script/main.js"></script>
-    <script defer src="./java-script/carrito.js"></script>
+    <script defer src="/preentregable.js/java-script/main.js"></script>
+    <script defer src="/preentregable.js/java-script/carrito.js"></script>
     </head>
     <body>
     <div>
@@ -79,86 +79,6 @@
         </section>
         </main>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script defer src="./java-script/carrito.js"></script>
-    <script defer src="./java-script/main.js"></script>
     </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-    crossorigin="anonymous"
-    />
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </html>
