--- a/carrito.html
+++ b/carrito.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito de Compras</title>
-    <!--JS-->
-    <script defer src="/preentregable.js/java-script/main.js"></script>
-    <script defer src="/preentregable.js/java-script/carrito.js"></script>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -51,10 +48,10 @@
             
                 <!-- Productos en el carrito -->
             <div id="carrito-productos" class="carrito-productos disabled">
-                    <!-- Esto se completa con JS-->
-            <div>
+                <!-- Esto se completa con JS-->
+                <div>
                 <!-- Más productos aquí -->
-            </div>
+                </div>
 
                 <!-- Acciones del carrito -->
                 <div id="carrito-acciones" class="carrito-acciones disabled">
@@ -79,6 +76,9 @@
         </section>
         </main>
     </div>
+    <!--JS-->
+    <script defer src="./java-script/main.js"></script>
+    <script defer src="./java-script/carrito.js"></script>
     </body>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </html>
