--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primer Entrega</title>
-    <!--JS-->
-    <script defer src="/preentregable.js/java-script/main.js"></script>
-    <script defer src="/preentregable.js/java-script/carrito.js"></script>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +27,7 @@
     </nav>
     <div>
         <main>
-            <h2 class="titulo-principal"> Productos </h2>
+            <h2 class="titulo-principal" id="titulo-principal"> Productos </h2>
             <div id="contenedor-productos" class="contenedor-productos">
         </main>
     <!--Contenido agregado desde JS-->
@@ -41,6 +38,9 @@
         Diseñado por Ivo Alderete
     </p>
 </footer>
+<!--JS-->
+<script defer src="./java-script/main.js"></script>
+<script defer src="./java-script/carrito.js"></script>
 </body>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
