--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito de Compras</title>
     <!--JS-->
-    <script defer src="./java-script/main.js"></script>
+    <script src="./java-script/main.js"></script>
     <script defer src="./java-script/carrito.js"></script>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
