--- a/carrito.html
+++ b/carrito.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carrito de Compras</title>
-    <!--JS-->
-    <script src="./java-script/main.js"></script>
-    <script defer src="./java-script/carrito.js"></script>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,7 +42,7 @@
         <main>
         <section id="carrito" >
             <h2 class="titulo-principal">Carrito</h2>
-            <div class="contenedor-carrito">
+            <div id="contenedor-carrito" class="contenedor-carrito">
                 <!-- Mensaje de carrito vacío -->
                 <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío</p>
             
@@ -79,6 +76,10 @@
         </section>
         </main>
     </div>
+
+    <script src="./java-script/main.js"></script>
+    <script src="./java-script/carrito.js"></script>
     </body>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </html>
