--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Primer Entrega</title>
-    <!--JS-->
-    <script defer src="./java-script/main.js"></script>
-    <script defer src="./java-script/carrito.js"></script>
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,17 +19,16 @@
             <ul>
                 <li>
                     <a class="cart-icon" href="./carrito.html">
-                        <i class="fas fa-shopping-cart"></i><span id="numerito" class="numerito">0</span> <!-- Ícono de carrito -->
+                        <i class="fas fa-shopping-cart"></i>
+                        <span id="numerito" class="numerito">0</span> <!-- Ícono de carrito -->
                     </a>
                 </li>
             </ul>
         </header>
     </nav>
     <div>
-        <main>
-            <h2 class="titulo-principal" id="titulo-principal"> Productos </h2>
-            <div id="contenedor-productos" class="contenedor-productos">
-        </main>
+        <h2 class="titulo-principal" id="titulo-principal"> Productos </h2>
+        <div id="contenedor-productos" class="contenedor-productos">
     <!--Contenido agregado desde JS-->
     </div>
 
@@ -41,6 +37,9 @@
         Diseñado por Ivo Alderete
     </p>
 </footer>
+
+<script src="./java-script/main.js"></script>
+<script src="./java-script/carrito.js"></script>
 </body>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
