--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="./styles/styles.css" />
     </head>
     <body>
-    <nav>
         <header>
+            <nav>
             <a href="./index.html">
             <img class="logo" src="./styles/img/AlienPc (7).png" alt="logo de la empresa AlienPc">
             </a>
@@ -24,23 +24,29 @@
                     </a>
                 </li>
             </ul>
+            </nav>
         </header>
-    </nav>
-    <div>
+        <main>
+        <div>
         <h2 class="titulo-principal" id="titulo-principal"> Productos </h2>
         <div id="contenedor-productos" class="contenedor-productos">
-    <!--Contenido agregado desde JS-->
-    </div>
 
-<footer>
-    <p>
-        Diseñado por Ivo Alderete
-    </p>
-</footer>
+        <!--Contenido agregado desde JS-->
 
-<script src="./java-script/main.js"></script>
-<script src="./java-script/carrito.js"></script>
-</body>
+        </div>
+        </main> 
+
+        <footer>
+            <p>
+                Diseñado por Ivo Alderete
+            </p>
+        </footer>
+
+
+
+    <script src="./java-script/main.js"></script>
+    <script src="./java-script/carrito.js"></script>
+    </body>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
