--- a/carrito.html
+++ b/carrito.html
@@ -44,7 +44,7 @@
             <h2 class="titulo-principal">Carrito</h2>
             <div id="contenedor-carrito" class="contenedor-carrito">
                 <!-- Mensaje de carrito vacío -->
-                <p id="carrito-vacio" class="carrito-vacio">Tu carrito está vacío</p>
+                <p id="carrito-vacio" class="carrito-vacio disabled">Tu carrito está vacío</p>
                 <!-- Productos en el carrito -->
             <div id="carrito-productos" class="carrito-productos disabled">
                 <!-- Esto se completa con JS-->
