--- a/carrito.html
+++ b/carrito.html
@@ -63,12 +63,10 @@
                             <p id="total-text" class="total-text disabled">Total:</p>
                             <p id="total">$</p>
                         </div>
-                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar">Comprar</button>
+                        <button id="carrito-acciones-comprar" class="carrito-acciones-comprar" href="./datosdecomprador.html">Comprar</button>
                     </div>
                 </div>
             </div>
-
-            <p id="carrito-comprado" class="carrito-comprado disabled">Muchas Gracias por tu Compra. 
 
         </section>
         </main>
