--- a/datosdecomprador.html
+++ b/datosdecomprador.html
@@ -130,7 +130,7 @@
         </form>
     </div>
 
-    <!-- Popup de agradecimiento -->
+    <!-- agradecimiento -->
     <div id="popup">
         <p>¡Gracias por tu compra! Tu pedido ha sido procesado correctamente.</p>
         <button id="closePopup">Cerrar</button>
