--- a/carrito.html
+++ b/carrito.html
@@ -70,8 +70,8 @@
         </main>
     </div>
 
-    <script src="./java-script/carrito.js"></script>
-    <script src="./java-script/main.js"></script>
+    <script src="./java-script/carrito.js" defer></script>
+    <script src="./java-script/main.js" defer></script>
     </body>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
